--- a/src/css/cadastro.css
+++ b/src/css/cadastro.css
@@ -39,7 +39,7 @@ header span{
 
 
 main{
-    padding-top: 20px;
+    padding-top: 10px;
     background-color: var(--bg-color);
     display: flex;
     flex-direction: column;
@@ -52,15 +52,14 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 395px;
-    gap: 10px;
+    width: 360px;
 }
 
 section input{
     width: 100%;
-    margin-top: 16px;
-    margin-bottom: 28px;
-    padding: 26px 2px 26px 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 2px 20px 10px;
     border: 1.5px solid var(--btn-border-color);
     border-radius: 12px;
     background-color: var(--grey-1);
@@ -90,6 +89,14 @@ h1 span{
     background-color: var(--color-primary);
     color: white;
     padding-left: 2px;
+}
+
+p, a{
+    font-size: 15px;
+}
+
+a{
+    font-weight: bold;
 }
 
 .caixa_erro{
