--- a/src/css/home.css
+++ b/src/css/home.css
@@ -341,6 +341,7 @@ html{
     align-items: center;
     height: 490px;
     width: 100%;
+    overflow: scroll;
 }
 
 .item_carrinho{
@@ -390,6 +391,7 @@ html{
     color: black;
     background-color: var(--grey-1);
     font-weight: bold;
+    padding-top: 5px;
     padding-right: 20px;
     padding-left: 20px;
     display: flex;
@@ -418,6 +420,9 @@ html{
     display: none;
 }
 
+.usuario_nao_logado{
+    display: none;
+}
 
 
 
