--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -36,14 +36,6 @@ header{
     margin-bottom: 5%;
 }
 
-.logo a{
-    text-decoration: none;
-}
-
-.logo a:visited{
-    text-decoration: none;
-}
-
 .logo h2{
     color: var(--grey-4);
     font-size: 22px;
@@ -88,18 +80,15 @@ header{
 
 .lista-de-filtros{
     display: flex;
-    overflow: auto;
+    flex-wrap: wrap;
     padding: 3%;
-
+    justify-content: center;
 }
 
 .lista-de-filtros li{
-    display: flex;
-    align-content: center;
-    align-items: center;
-
     box-sizing: border-box;
     flex-grow: 1;
+    display: inline-block;
     font-weight: 500;
     color: var(--grey-4);
     font-size: 16px;
@@ -134,13 +123,12 @@ header{
 .container-tabela{
     display: flex;
     justify-content: center;
-    padding: 5%;
 }
 
 table{
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 .titulos{
@@ -162,11 +150,6 @@ table{
 .produtos{
     width: 350px;
 }
-
-.produtos img{
-    width: 50px;
-}
-
 .produtos p{
     display: inline;
     font-weight: 500;
@@ -178,9 +161,4 @@ table{
 
 .descricao{
     width: 450px;
-}
-
-.icones-td img{
-    margin-right: 10%;
-    cursor: pointer;
 }
