--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -17,6 +17,7 @@
     --grey-2: #E9ECEF;
     --grey-1: #F8F9FA;
 
+    font-family: 'Inter';
   }
 
 
@@ -77,6 +78,14 @@ header{
     margin-left: 34px;
 }
 
+#avatar{
+    cursor: pointer;
+}
+
+.ativa{
+    background-color: var(--color-primary);
+    color: white;
+}
 
 
 .barra-de-botoes{
@@ -111,6 +120,11 @@ header{
     cursor: pointer;
 }
 
+.lista-de-filtros li:hover{
+    background-color: var(--color-primary);
+    color: white;
+}
+
 
 .lista-de-filtros img{
     margin-right: 20px;
@@ -133,11 +147,12 @@ header{
 
 .container-tabela{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 5%;
 }
 
-table{
+#tabela-de-produtos{
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     margin-top: 15px;
@@ -179,8 +194,84 @@ table{
 .descricao{
     width: 450px;
 }
+.icones-td{
+    display: flex;
+    justify-content: center;
+}
 
 .icones-td img{
+    align-items: center;
     margin-right: 10%;
     cursor: pointer;
+}
+
+.popup_usuario{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    margin-right: 2%;
+    width: 170px;
+    height: 200px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: white;
+    border: 1.5px solid var(--grey-2);
+    border-radius: 15px;
+    padding-bottom: 10px;
+}
+
+.menu_usuario{
+    color: white;
+    font-weight: bold;
+    display: flex;
+    background-color: var(--color-primary);
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 15px;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-bottom: 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    height: 100%;
+    width: 100%;
+}
+
+.botao_fechar{
+    width: 11px;
+    height: 15px;
+    cursor: pointer;
+}
+
+.caixa_usuario{
+    width: 100%;
+    height: 80%;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.caixa_usuario a{
+    margin-top: 15px;
+    padding: 15px 20px;
+    background-color: var(--color-primary-50);
+    text-decoration: none;
+    min-width: 60%;
+    text-align: center;
+    border-radius: 30px;
+    color: black;
+    font-weight: bold;
+    height: 200px;
+}
+
+.caixa_usuario a:hover{
+    background-color: var(--color-primary);
+    color: white;
+    cursor: pointer;
+}
+
+.menu_esconder{
+    display: none;
 }
